--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pexxi",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "Personal npm card for Pekka Kokkonen (@pexxi)",
 	"main": "dist/card.js",
 	"unpkg": "index.html",
@@ -15,8 +15,19 @@
 	"bin": {
 		"pexxi": "bin/index.js"
 	},
-	"files": ["bin", "dist", "index.html"],
-	"keywords": ["card", "npm", "npm card", "npx", "npx card", "business card"],
+	"files": [
+		"bin",
+		"dist",
+		"index.html"
+	],
+	"keywords": [
+		"card",
+		"npm",
+		"npm card",
+		"npx",
+		"npx card",
+		"business card"
+	],
 	"author": "Pekka Kokkonen",
 	"license": "ISC",
 	"dependencies": {},
